--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
     </section>
 
     <section class="depositions" id="depoimentos">
+
+        <div class="background-depositions"></div>
+
         <div class="container">
             <div class="row">
 
@@ -345,26 +348,27 @@
                         <div class="deposition" id="deposition-1">
                             <div class="conteiner-grade-deposition">
                                 <div class="img-deposition"></div>
-                                    <div>
-                                        <p class="name-deposition">
-                                            <b>
-                                                Diego Pereira
-                                            </b>
-                                        </p>
-                                        <p class="note-deposition">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half-alt"></i>&nbsp; <span>4.5</span>
-                                        </p>
-                                    </div>
+                                <div>
+                                    <p class="name-deposition">
+                                        <b>
+                                            Diego Pereira
+                                        </b>
+                                    </p>
+                                    <p class="note-deposition">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star-half-alt"></i>&nbsp; <span>4.5</span>
+                                    </p>
+                                </div>
                             </div>
 
                             <p class="text-deposition">
                                 <i class="fas fa-quote-left"></i>
                                 <span>
-                                    Muito bom, recomendo demais! Comida bem feita pelo chefe, atendimento dentro dos parâmetros e boa comunicação com o cliente.
+                                    Muito bom, recomendo demais! Comida bem feita pelo chefe, atendimento dentro dos
+                                    parâmetros e boa comunicação com o cliente.
                                 </span>
                                 <i class="fas fa-quote-right"></i>
                             </p>
@@ -374,23 +378,23 @@
                     </div>
 
 
-                    <div class="deposition" id="deposition-2">
+                    <div class="deposition hidden" id="deposition-2">
                         <div class="conteiner-grade-deposition">
                             <div class="img-deposition"></div>
-                                <div>
-                                    <p class="name-deposition">
-                                        <b>
-                                            Ana Beatriz
-                                        </b>
-                                    </p>
-                                    <p class="note-deposition">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>&nbsp; <span>5.0</span>
-                                    </p>
-                                </div>
+                            <div>
+                                <p class="name-deposition">
+                                    <b>
+                                        Ana Beatriz
+                                    </b>
+                                </p>
+                                <p class="note-deposition">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>&nbsp; <span>5.0</span>
+                                </p>
+                            </div>
                         </div>
 
                         <p class="text-deposition">
@@ -404,24 +408,23 @@
 
                     </div>
 
-
-                    <div class="deposition" id="deposition-3">
+                    <div class="deposition hidden" id="deposition-3">
                         <div class="conteiner-grade-deposition">
                             <div class="img-deposition"></div>
-                                <div>
-                                    <p class="name-deposition">
-                                        <b>
-                                            João Guilherme
-                                        </b>
-                                    </p>
-                                    <p class="note-deposition">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="far fa-star"></i>&nbsp; <span>4.0</span>
-                                    </p>
-                                </div>
+                            <div>
+                                <p class="name-deposition">
+                                    <b>
+                                        João Guilherme
+                                    </b>
+                                </p>
+                                <p class="note-deposition">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>&nbsp; <span>4.0</span>
+                                </p>
+                            </div>
                         </div>
 
                         <p class="text-deposition">
@@ -432,8 +435,11 @@
                             </span>
                             <i class="fas fa-quote-right"></i>
                         </p>
-
                     </div>
+
+                    <a class="btn btn-sm btn-white btn-social mr-3 active">1</a>
+                    <a class="btn btn-sm btn-white btn-social mr-3">2</a>
+                    <a class="btn btn-sm btn-white btn-social">3</a>
 
                 </div>
             </div>
