--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js" defer></script>
     <script type="text/javascript" src="./js/bootstrap.min.js" defer></script>
     <script type="text/javascript" src="./js/popper.min.js" defer></script>
+    <script type="text/javascript" src="./js/dados.js" defer></script>
+    <script type="text/javascript" src="./js/app.js" defer></script>
     <title>Seja - Bem-Vindo!</title>
 </head>
 
@@ -184,27 +186,27 @@
                 </div>
                 
                 <div class="col-12 container-menu">
-                    <a class="btn btn-white btn-sm mr-3">
+                    <a id="menu-burgers" class="btn btn-white btn-sm mr-3 active" onclick="menu.methods.listItensMenu('burgers')">
                         <i class="fas fa-hamburger"></i>&nbsp; Burguers
                     </a>
 
-                    <a class="btn btn-white btn-sm mr-3">
+                    <a id="menu-pizzas" class="btn btn-white btn-sm mr-3" onclick="menu.methods.listItensMenu('pizzas')">
                         <i class="fas fa-pizza-slice"></i>&nbsp; Pizza
                     </a>
 
-                    <a class="btn btn-white btn-sm mr-3">
+                    <a id="menu-churrasco" class="btn btn-white btn-sm mr-3" onclick="menu.methods.listItensMenu('churrasco')">
                         <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
                     </a>
 
-                    <a class="btn btn-white btn-sm mr-3">
-                        <i class="fas fa-bacon"></i>&nbsp; Steakes
+                    <a id="menu-steaks" class="btn btn-white btn-sm mr-3" onclick="menu.methods.listItensMenu('steaks')">
+                        <i class="fas fa-bacon"></i>&nbsp; Steaks
                     </a>
 
-                    <a class="btn btn-white btn-sm mr-3">
+                    <a id="menu-bebidas" class="btn btn-white btn-sm mr-3" onclick="menu.methods.listItensMenu('bebidas')">
                         <i class="fas fa-cocktail"></i>&nbsp; Bebidas
                     </a>
 
-                    <a class="btn btn-white btn-sm mr-3">
+                    <a id="menu-sobremesas" class="btn btn-white btn-sm mr-3" onclick="menu.methods.listItensMenu('sobremesas')">
                         <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
                     </a>
                 </div>
@@ -212,111 +214,13 @@
                 <div class="col-12">
                     <div class="row" id="menuItens">
 
-                        <div class="col-3 mb-5">
-                            <div class="card card-item">
-                                <div class="img-product">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
-                                </div>
-
-                                <p class="title-product text-center mt-4">
-                                    <b>Nome</b>
-                                </p>
-
-                                <p class="price-product text-center">
-                                    <b>
-                                        R$ 154,90
-                                    </b>
-                                </p>
-
-                                <div class="add-buy">
-                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                    <span class="add-number-itens">0</span>
-                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-3 mb-5">
-                            <div class="card card-item">
-                                <div class="img-product">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
-                                </div>
-
-                                <p class="title-product text-center mt-4">
-                                    <b>Nome</b>
-                                </p>
-
-                                <p class="price-product text-center">
-                                    <b>
-                                        R$ 154,90
-                                    </b>
-                                </p>
-
-                                <div class="add-buy">
-                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                    <span class="add-number-itens">0</span>
-                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-3 mb-5">
-                            <div class="card card-item">
-                                <div class="img-product">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
-                                </div>
-
-                                <p class="title-product text-center mt-4">
-                                    <b>Nome</b>
-                                </p>
-
-                                <p class="price-product text-center">
-                                    <b>
-                                        R$ 154,90
-                                    </b>
-                                </p>
-
-                                <div class="add-buy">
-                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                    <span class="add-number-itens">0</span>
-                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-3 mb-5">
-                            <div class="card card-item">
-                                <div class="img-product">
-                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
-                                </div>
-
-                                <p class="title-product text-center mt-4">
-                                    <b>Nome</b>
-                                </p>
-
-                                <p class="price-product text-center">
-                                    <b>
-                                        R$ 154,90
-                                    </b>
-                                </p>
-
-                                <div class="add-buy">
-                                    <span class="btn-minus"><i class="fas fa-minus"></i></span>
-                                    <span class="add-number-itens">0</span>
-                                    <span class="btn-plus"><i class="fas fa-plus"></i></span>
-                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
-                                </div>
-                            </div>
-                        </div>
+                        
 
                     </div>
                 </div>
 
                 <div class="col-12 text-center">
-                    <a class="btn btn-white btn-sm">
+                    <a id="btnSeeMore" class="btn btn-white btn-sm" onclick="menu.methods.varMais()">
                         Ver mais
                     </a>
                 </div>
